added barebone material on html. A little bit of CSS

--- a/index.html
+++ b/index.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
     <title>Jacob John's Portfolio</title>
 </head>
+
 <body>
-    <h1>Welcome To My Portfolio</h1>
-    <h2>Jacob John</h2>
+    <div id="intro">
+        <div id="introImage">
+            <img src="./splash-page.jpg" alt="computer">
+        </div>
+        <div id="introContent">
+            <h1>Welcome To My Portfolio</h1>
+            <h2>Jacob John</h2>
+            <a href="#aboutMe" class="btn">About Me</a>
+            <a href="#myWork" class="btn">My Work</a>
+            <a href="#contact" class="btn">Contact Info</a>
+            <h3>More Content to Come..</h3>
+        </div>
+    </div>
+    <div id="aboutMe">
+        <div class="header">
+            <h2>About Me</h2>
+        </div>
+    </div>
+    <div id="myWork">
+        <div class="header">
+            <h2>
+                My Work
+            </h2>
+        </div>
+    </div>
+    <div id="contact">
+        <div class="header">
+            <h2>Contact Information</h2>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
