fixed styling buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Jacob John's Portfolio</title>
 </head>
@@ -16,9 +17,11 @@
                 <div id="introText">
                     <h1>Jacob John's Portfolio</h1>
                     <h2>Welcome</h2>
-                    <a href="#aboutMe" class="btn" id="viewAboutMe">About Me</a>
-                    <a href="#myWork" class="btn" id="viewMyWork">My Work</a>
-                    <a href="#contact" class="btn" id="viewContact">Contact Info</a>
+                    <div id="buttonContainer">
+                        <a href="#aboutMe" class="btn" id="viewAboutMe">About Me</a>
+                        <a href="#myWork" class="btn" id="viewMyWork">My Work</a>
+                        <a href="#contact" class="btn" id="viewContact">Contact Info</a>
+                    </div>
                 </div>
             </div>
             <div id="introImage"></div>
@@ -39,7 +42,7 @@
             </div>
             <div class="work">
                 <img src="images/simon-game.png" alt="simon-game">
-                <div class="subheader">
+                <div class="subHeader">
                     <h3>Simon Game</h3>
                 </div>
                 <div class="content">
@@ -48,7 +51,7 @@
             </div>
             <div class="work">
                 <img src="images/brew-check.png" alt="brewCheck">
-                <div class="subheader">
+                <div class="subHeader">
                     <h3>BrewCheck</h3>
                 </div>
                 <div class="content">
@@ -57,7 +60,7 @@
             </div>
             <div class="work">
                 <img src="images/remr.png" alt="rEMR">
-                <div class="subheader">
+                <div class="subHeader">
                     <h3>rEMR</h3>
                 </div>
                 <div class="content">
