finished portfolio site

--- a/index.html
+++ b/index.html
@@ -31,9 +31,17 @@
             <div class="header">
                 <h2>About Me</h2>
             </div>
-            <div class="content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est beatae voluptatibus vero incidunt quod ducimus
-                    minus rem dolore eius dignissimos?</p>
+            <div id="aboutMeContent">
+                <img src="/images/jacobJohnHeadShot.jpeg" alt="" srcset="">
+                <div class="content">
+                    <p>I am a full-stack developer who is thirsty for knowledge to figure out the solution to the problem at
+                        hand. They synergy between my science, math, and medical background paved my path towards the world
+                        of software development. My thrive for efficiency while maintaining the quality of the product for
+                        the user allows me to work well with others. I believe if you put in the hard work, you'll be rewarded
+                        with the satisfaction that you gave it your all, no matter the outcome.</p>
+                    <p>Below are a few of my projects. Click on the images to see the live projects, or check out my github
+                        (in my contacts) to see the source-code!</p>
+                </div>
             </div>
         </div>
         <div id="myWork">
@@ -41,30 +49,36 @@
                 <h2>My Work</h2>
             </div>
             <div class="work">
-                <img src="images/simon-game.png" alt="simon-game">
+                <a href="http://simon-game-jacobjohn.bitballoon.com/">
+                    <img src="images/simon-game.png" alt="simon-game">
+                </a>
                 <div class="subHeader">
                     <h3>Simon Game</h3>
                 </div>
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, earum.</p>
+                    <p>This is my very first project for General Assembly. It consist of HTML, CSS, and JavaScript, with a touch of jQuery. Out of the 4 projects that the students could choose from for the first project, this was one of the most difficult ones. I decided to challenge myself even though I had no experience with coding before the course. I was surprised and satisfied by the outcome.</p>
                 </div>
             </div>
             <div class="work">
-                <img src="images/brew-check.png" alt="brewCheck">
+                <a href="https://brewcheck.herokuapp.com/">
+                    <img src="images/brew-check.png" alt="brewCheck">
+                </a>
                 <div class="subHeader">
                     <h3>BrewCheck</h3>
                 </div>
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, earum.</p>
+                    <p>For the second project in General Assembly, I decided to make a brewery app that allows users to share their experiences at certain breweries. This is my first full stack application, using HTML, CSS, JavaScript, Node.js, Express, MongoDB, and many more libraries. The list of total libraries used can be found in my github.</p>
                 </div>
             </div>
             <div class="work">
-                <img src="images/remr.png" alt="rEMR">
+                <a href="https://remr.herokuapp.com/">
+                    <img src="images/remr.png" alt="rEMR">
+                </a>
                 <div class="subHeader">
                     <h3>rEMR</h3>
                 </div>
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, earum.</p>
+                    <p>This is my first MongoDB, Express, React, Node (MERN) stack application. It has 3 models, all with full CRUD. I decided to use my previous medical background and build a basic electronic medical record. The dummy user and login for this page is 'Doctor Jay' and 'password1' for the username and password. </p>
                 </div>
             </div>
         </div>
