added link to profile pic

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 <h2>About Me</h2>
             </div>
             <div id="aboutMeContent">
-                <img src="/images/jacobJohnHeadShot.jpeg" alt="" srcset="">
+                <a href="https://www.linkedin.com/in/jacobjohn90/">
+                    <img src="/images/jacobJohnHeadShot.jpeg" alt="" srcset="">
+                </a>
                 <div class="content">
                     <p>I am a full-stack developer who is thirsty for knowledge to figure out the solution to the problem at
                         hand. They synergy between my science, math, and medical background paved my path towards the world
@@ -41,6 +43,7 @@
                         with the satisfaction that you gave it your all, no matter the outcome.</p>
                     <p>Below are a few of my projects. Click on the images to see the live projects, or check out my github
                         (in my contacts) to see the source-code!</p>
+                    <p>Click on my profile picture to view my LinkedIn!</p>
                 </div>
             </div>
         </div>
@@ -56,7 +59,10 @@
                     <h3>Simon Game</h3>
                 </div>
                 <div class="content">
-                    <p>This is my very first project for General Assembly. It consist of HTML, CSS, and JavaScript, with a touch of jQuery. Out of the 4 projects that the students could choose from for the first project, this was one of the most difficult ones. I decided to challenge myself even though I had no experience with coding before the course. I was surprised and satisfied by the outcome.</p>
+                    <p>This is my very first project for General Assembly. It consist of HTML, CSS, and JavaScript, with a touch
+                        of jQuery. Out of the 4 projects that the students could choose from for the first project, this
+                        was one of the most difficult ones. I decided to challenge myself even though I had no experience
+                        with coding before the course. I was surprised and satisfied by the outcome.</p>
                 </div>
             </div>
             <div class="work">
@@ -67,7 +73,10 @@
                     <h3>BrewCheck</h3>
                 </div>
                 <div class="content">
-                    <p>For the second project in General Assembly, I decided to make a brewery app that allows users to share their experiences at certain breweries. This is my first full stack application, using HTML, CSS, JavaScript, Node.js, Express, MongoDB, and many more libraries. The list of total libraries used can be found in my github.</p>
+                    <p>For the second project in General Assembly, I decided to make a brewery app that allows users to share
+                        their experiences at certain breweries. This is my first full stack application, using HTML, CSS,
+                        JavaScript, Node.js, Express, MongoDB, and many more libraries. The list of total libraries used
+                        can be found in my github.</p>
                 </div>
             </div>
             <div class="work">
@@ -78,7 +87,10 @@
                     <h3>rEMR</h3>
                 </div>
                 <div class="content">
-                    <p>This is my first MongoDB, Express, React, Node (MERN) stack application. It has 3 models, all with full CRUD. I decided to use my previous medical background and build a basic electronic medical record. The dummy user and login for this page is 'Doctor Jay' and 'password1' for the username and password. </p>
+                    <p>This is my first MongoDB, Express, React, Node (MERN) stack application. It has 3 models, all with full
+                        CRUD. I decided to use my previous medical background and build a basic electronic medical record.
+                        The dummy user and login for this page is 'Doctor Jay' and 'password1' for the username and password.
+                        </p>
                 </div>
             </div>
         </div>
