added slow heroku text

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                         their experiences at certain breweries. This is my first full stack application, using HTML, CSS,
                         JavaScript, Node.js, Express, MongoDB, and many more libraries. The list of total libraries used
                         can be found in my github.</p>
+                    <p>Please excuse the long load time for the application. It is hosted by herokuapp at the moment, which will load slower than normal.</p>
                 </div>
             </div>
             <div class="work">
@@ -89,8 +90,9 @@
                 <div class="content">
                     <p>This is my first MongoDB, Express, React, Node (MERN) stack application. It has 3 models, all with full
                         CRUD. I decided to use my previous medical background and build a basic electronic medical record.
-                        The dummy user and login for this page is 'Doctor Jay' and 'password1' for the username and password.
-                        </p>
+                        The dummy user and login for this page is 'Doctor Jay' and 'password1' for the username and password.</p>
+                    <p>Please excuse the long load time for the application. It is hosted by herokuapp at the moment, which will load slower than
+                        normal.</p>
                 </div>
             </div>
         </div>
