--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
             <div class="header">
                 <h2>My Work</h2>
             </div>
-            <div class="work">
-                <a href="http://simon-game-jacobjohn.bitballoon.com/">
-                    <img src="images/simon-game.png" alt="simon-game">
-                </a>
+            <div class="work" id="first">
                 <div class="subHeader">
                     <h3>Simon Game</h3>
                 </div>
+                <a href="http://simon-game-jacobjohn.bitballoon.com/">
+                    <img src="images/simon-game.png" alt="simon-game">
+                </a>
                 <div class="content">
                     <p>This is my very first project for General Assembly. It consist of HTML, CSS, and JavaScript, with a touch
                         of jQuery. Out of the 4 projects that the students could choose from for the first project, this
@@ -66,33 +66,52 @@
                 </div>
             </div>
             <div class="work">
-                <a href="https://brewcheck.herokuapp.com/">
-                    <img src="images/brew-check.png" alt="brewCheck">
-                </a>
                 <div class="subHeader">
                     <h3>BrewCheck</h3>
                 </div>
+                <a href="https://brewcheck.herokuapp.com/">
+                    <img src="images/brew-check.png" alt="brewCheck">
+                </a>
                 <div class="content">
                     <p>For the second project in General Assembly, I decided to make a brewery app that allows users to share
                         their experiences at certain breweries. This is my first full stack application, using HTML, CSS,
                         JavaScript, Node.js, Express, MongoDB, and many more libraries. The list of total libraries used
                         can be found in my github.</p>
-                    <p>Please excuse the long load time for the application. It is hosted by herokuapp at the moment, which will load slower than normal.</p>
+                    <p>Please excuse the long load time for the application. It is hosted by herokuapp at the moment, which
+                        will load slower than normal.</p>
                 </div>
             </div>
             <div class="work">
-                <a href="https://remr.herokuapp.com/">
-                    <img src="images/remr.png" alt="rEMR">
-                </a>
                 <div class="subHeader">
                     <h3>rEMR</h3>
                 </div>
+                <a href="https://remr.herokuapp.com/">
+                    <img src="images/remr.png" alt="rEMR">
+                </a>
                 <div class="content">
                     <p>This is my first MongoDB, Express, React, Node (MERN) stack application. It has 3 models, all with full
                         CRUD. I decided to use my previous medical background and build a basic electronic medical record.
                         The dummy user and login for this page is 'Doctor Jay' and 'password1' for the username and password.</p>
-                    <p>Please excuse the long load time for the application. It is hosted by herokuapp at the moment, which will load slower than
-                        normal.</p>
+                    <p>Please excuse the long load time for the application. It is hosted by herokuapp at the moment, which
+                        will load slower than normal.
+                    </p>
+                </div>
+            </div>
+            <div class="work" id="last">
+                <div class="subHeader">
+                    <h3>Comment Reels</h3>
+                </div>
+                <a href="https://comment-reels.herokuapp.com">
+                    <img src="images/comment-reels.png" alt="Comment Reels">
+                </a>
+                <div class="content">
+                    <p>This is my first React on Rails stack application. It has a movie conversation app that utilizes a database
+                        to save authorized user's comments, with the ability to add new movies (using OMDB api) to the database,
+                        and editing/deleting your own comment for that movie! The dummy user and login for this page is 'test@tester.com'
+                        and 'testtest' for the username and password.</p>
+                    <p>Please excuse the long load time for the application. It is hosted by herokuapp at the moment, which
+                        will load slower than normal.
+                    </p>
                 </div>
             </div>
         </div>
