updated contact style

--- a/index.html
+++ b/index.html
@@ -115,30 +115,26 @@
                 </div>
             </div>
         </div>
-    </div>
-    <footer id="contact">
-        <div class="header">
-            <h2>Contact Information</h2>
-        </div>
-        <div class="content">
-            <p>Email:
-                <strong>
-                    <a href="mailto:jacobjohn90@gmail.com">jacobjohn90@gmail.com</a>
-                </strong>
-            </p>
-            <p>GitHub:
-                <strong>
-                    <a href="https://github.com/jacobjohn90?tab=repositories">www.github.com/jacobjohn90</a>
-                </strong>
-            </p>
-            <p>LinkedIn:
-                <strong>
-                    <a href="https://www.linkedin.com/in/jacobjohn90/">www.linkedin.com/in/jacobjohn90</a>
-                </strong>
-            </p>
+        <div id="contact">
+            <div class="header">
+                <h2>Contact Information</h2>
+            </div>
+            <div class="contactContent">
+                <a href="mailto:jacobjohn90@gmail.com" target="_blank">
+                    <img class="logo" src="./images/email-icon.png" alt="E-Mail" />
+                </a>
 
+                <a href="https://github.com/jacobjohn90?tab=repositories" target="_blank">
+                    <img class="logo" src="./images/github-icon.png" alt="GitHub" />
+                </a>
+
+                <a href="https://www.linkedin.com/in/jacobjohn90/" target="_blank">
+                    <img class="logo" src="./images/linkedin-icon.png" atl="LinkedIn" />
+                </a>
+            </div>
         </div>
-    </footer>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
