fixed spelling/grammar errors

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                     <img src="images/comment-reels.png" alt="Comment Reels">
                 </a>
                 <div class="content">
-                    <p>This is my first React on Rails stack application. It has a movie conversation app that utilizes a database
-                        to save authorized user's comments, with the ability to add new movies (using OMDB api) to the database,
+                    <p>This is my first React on Rails stack application. It is a movie conversation app that utilizes a database
+                        to save authorized user's comments, with the ability to add new movies (using OMDB's api) to the database,
                         and editing/deleting your own comment for that movie! The dummy user and login for this page is 'test@tester.com'
                         and 'testtest' for the username and password.</p>
                     <p>Please excuse the long load time for the application. It is hosted by herokuapp at the moment, which
