updated project link to open in new tab

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="subHeader">
                     <h3>Simon Game</h3>
                 </div>
-                <a href="http://simon-game-jacobjohn.bitballoon.com/">
+                <a href="http://simon-game-jacobjohn.bitballoon.com/" target="_blank">
                     <img src="images/simon-game.png" alt="simon-game">
                 </a>
                 <div class="content">
@@ -69,7 +69,7 @@
                 <div class="subHeader">
                     <h3>BrewCheck</h3>
                 </div>
-                <a href="https://brewcheck.herokuapp.com/">
+                <a href="https://brewcheck.herokuapp.com/" target="_blank">
                     <img src="images/brew-check.png" alt="brewCheck">
                 </a>
                 <div class="content">
@@ -85,7 +85,7 @@
                 <div class="subHeader">
                     <h3>rEMR</h3>
                 </div>
-                <a href="https://remr.herokuapp.com/">
+                <a href="https://remr.herokuapp.com/" target="_blank">
                     <img src="images/remr.png" alt="rEMR">
                 </a>
                 <div class="content">
@@ -101,7 +101,7 @@
                 <div class="subHeader">
                     <h3>Comment Reels</h3>
                 </div>
-                <a href="https://comment-reels.herokuapp.com">
+                <a href="https://comment-reels.herokuapp.com" target="_blank">
                     <img src="images/comment-reels.png" alt="Comment Reels">
                 </a>
                 <div class="content">
