--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </a>
                 <div class="content">
                     <p>I am a full-stack developer who is thirsty for knowledge to figure out the solution to the problem at
-                        hand. They synergy between my science, math, and medical background paved my path towards the world
+                        hand. The synergy between my science, math, and medical background paved my path towards the world
                         of software development. My thrive for efficiency while maintaining the quality of the product for
                         the user allows me to work well with others. I believe if you put in the hard work, you'll be rewarded
                         with the satisfaction that you gave it your all, no matter the outcome.</p>
