updated simon game url

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="subHeader">
                     <h3>Simon Game</h3>
                 </div>
-                <a href="http://simon-game-jacobjohn.bitballoon.com/" target="_blank">
+                <a href="https://simon-game-jacobjohn.netlify.com/" target="_blank">
                     <img src="images/simon-game.png" alt="simon-game">
                 </a>
                 <div class="content">
